--- a/src/styles/task.css
+++ b/src/styles/task.css
@@ -13,35 +13,40 @@
 }
 
 /* CSS for the Popup Form */
-#popup {
-    position:fixed;
-    width: 500px;
-    height: 680px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 30%;
+    height: 50%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    margin-top: 50px;
+    margin-left: 450px;
+  }
+  
+  .popup-inner {
+    background: #fff;
     padding: 20px;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    transition: all 0.3s ease-in-out;
-    opacity: 0;
-    visibility: hidden;
-    z-index: 10; /* Ensure popup is above other elements */
-}
-
-#popup.visible {
-    opacity: 1;
-    visibility: visible;
-}
-
+    position: relative;
+  }
+  
+  #close-popup {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+  
 #task-form {
+    position: relative;
     display: flex;
     flex-direction: column;
     gap: 15px;
     border: 1px solid #ccc; /* Add border to the form */
     padding: 20px;
     border-radius: 5px;
+    width: 400px;
 }
 
 #task-form input,
@@ -65,6 +70,7 @@ button {
 button[type="submit"] {
     background-color: #333;
     color: #fff;
+    margin-top: 0%;
 }
 
 #close-popup {
