modified:   src/App.js 	modified:   src/components/Login.js 	modified:   src/components/Register.js 	modified:   src/components/firebase-task.js 	new file:   src/components/useAuth.js 	modified:   src/pages/SignUpIn.js 	modified:   src/styles/task.css

--- a/src/styles/task.css
+++ b/src/styles/task.css
@@ -68,7 +68,7 @@ button {
 
 #close-popup,
 button[type="submit"] {
-    background-color: #333;
+    background-color: #512da8;
     color: #fff;
     margin-top: 0%;
 }
