change add task button color

--- a/src/styles/task.css
+++ b/src/styles/task.css
@@ -1,7 +1,7 @@
 /* CSS for the "Add Task" Button */
 #open-popup {
     margin: 20px auto; /* Center horizontally */
-    background-color: #073363;
+    background-color: #512da8;
     color: #ffffff;
     border: none;
     border-radius: 5px;
