use navigate add to login page

--- a/src/styles/task.css
+++ b/src/styles/task.css
@@ -68,7 +68,7 @@ button {
 
 #close-popup,
 button[type="submit"] {
-    background-color: #512da8;
+    background-color: #073363;
     color: #fff;
     margin-top: 0%;
 }
