--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -309,6 +309,7 @@ main .recent-tasks a{
     color: var(--color-primary);
 }
 .right-section {
+    margin-top: 11%;
     display: flex;
     flex-direction: column;
     gap: 1rem; /* Add some spacing between the elements */
