--- a/src/styles/task.css
+++ b/src/styles/task.css
@@ -90,7 +90,7 @@ button:hover {
     display: block;
 }
 
-.table {
+.a-table {
     width: 100%;
     margin-top: 60px;
     margin-left: 10%;
@@ -99,14 +99,14 @@ button:hover {
     text-align: left;
 }
 
-.table thead th {
+.a-table thead th {
     border-bottom: 2px solid #000;
     padding: 10px;
     text-align: center;
     vertical-align: top;
 }
 
-.table tbody td {
+.a-table tbody td {
     padding: 10px;
     border-bottom: 1px solid #000000;
     border-right: 1px solid black;
