--- a/src/styles/groupDash.css
+++ b/src/styles/groupDash.css
@@ -282,6 +282,7 @@ main .recent-tasks h2{
 
 main .recent-tasks table{
     margin-top: 1.5rem;
+    margin-left: 0.1rem;
     background-color: var(--color-white);
     width: 100%;
     padding: var(--card-padding);
