--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -9,8 +9,7 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
+  
   }
   
   .modal-content {
@@ -32,7 +31,7 @@
   
   .close:hover,
   .close:focus {
-    color: black;
+    color: rgb(255, 255, 255);
     text-decoration: none;
     cursor: pointer;
   }
