--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -155,6 +155,10 @@
     z-index: 1000;
 }
 
+.a-toggle-container .msg{
+    color: white;
+}
+
 .a-container.a-active .a-toggle-container{
     transform: translateX(-100%);
     border-radius: 0 150px 100px 0;
@@ -209,3 +213,42 @@
     transform: translateX(200%);
 }
 
+/* Modal styling */
+#custom-modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  
+  #custom-modal-content {
+    background-color: #fefefe;
+    border: 1px solid #888;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    max-width: 500px;
+    width: 80%;
+    text-align: center;
+  }
+  
+  #custom-close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  
+  #custom-close:hover,
+  #custom-close:focus {
+    color: black;
+    text-decoration: none;
+  }
+  
