--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -1,10 +1,10 @@
-/* src/styles/settings.css */
+
 .settings-container {
   margin-top: 150px;
   padding: 20px;
-  max-width: 600px;
-  height: 250px;
-  margin-left: 350px;
+  max-width: 400px;
+  height: 210px;
+  margin-left: 150px;
   background-color: #394673;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -31,4 +31,54 @@
   width: 120px;
   color: #333;
   color: white;
+}
+
+.profileSender{
+  display: flex;
+  
+
+}
+
+
+.upload-container {
+  background-color: #ffffff; 
+  border: 1px solid #3b3838; 
+  border-radius: 8px; 
+  padding: 20px; 
+  margin-top: 150px; 
+  height: 210px;
+  margin-left: -350px;
+  width: 400px;
+}
+
+.upload-container h2 {
+  font-size: 24px; 
+  color: #073363; 
+  margin-bottom: 20px; 
+}
+
+.upload-container input[type="file"] {
+  display: block; 
+  margin-bottom: 10px; 
+}
+
+.upload-container button {
+  background-color: #394673; 
+  color: #ffffff; 
+  border: none; 
+  border-radius: 5px; 
+  padding: 10px 20px; 
+  font-size: 16px; 
+  cursor: pointer; 
+  transition: background-color 0.3s; 
+  box-shadow: #ffffff;
+}
+
+.upload-container button:hover {
+  background-color: #05254a; 
+}
+
+.upload-container button:disabled {
+  background-color: #cccccc; 
+  cursor: not-allowed; 
 }
