modified:   src/App.js 	modified:   src/components/TaskFormPopup.js 	modified:   src/components/TaskRow.js 	modified:   src/components/TaskTable.js 	modified:   src/pages/Completed.js 	modified:   src/pages/GroupDash.js 	modified:   src/pages/Group_task.js 	modified:   src/pages/In_progress.js 	modified:   src/pages/Team.js 	modified:   src/pages/To-do.js 	modified:   src/styles/login.css 	modified:   src/styles/task.css

--- a/src/styles/task.css
+++ b/src/styles/task.css
@@ -1,9 +1,7 @@
-/* CSS for the "Add Task" Button */
-
 
 #open-popup {
-    margin: 20px auto; /* Center horizontally */
-    background-color: #073363;
+    margin: 20px auto; 
+    background-color: #1b4675;
     color: #ffffff;
     border: none;
     border-radius: 5px;
@@ -11,10 +9,10 @@
     transition: all 0.2s ease-in-out;
     width: 100px;
     height: 50px;
-    display: block; /* Center horizontally */
+    display: block; 
 }
 
-/* CSS for the Popup Form */
+
 .popup {
     position: fixed;
     top: 0;
